# ChangeLog for x11-base/xorg-drivers
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Dec 2015; Chuso Pérez <overlay@chuso.net> kodi-15.1.ebuild,
  Add support to vivante video card.