@@ -1,8 +1,8 @@
 AUX kodi-15.1-gcc-5.patch 6890 SHA256 503e296e1911c28fd99579c02f56c2a3965aeb18378f552dbcef5e63382a0b8d SHA512 8c0f8925b2d70f2c0e186be43b80749a1998e0fd6b6131ceb8189e3efffff1de2662078666a5cc76b4a1790d99cfa7b7ab839d907febac37d4c30999124334e1 WHIRLPOOL 4f4f070f798c8e26908cdb0b63ada53459133308d67979b903a29c905799f49ff5dd5b46c8338f32f2a42e0812cbaf55cb217374542a4abb6596251ebc786582
 AUX kodi-15.1-texturepacker.patch 723 SHA256 4e0843a63d9d2386029b4cb34734491efbf4999b9b121bfb774e8c203be8bdcb SHA512 357d293cbc5d03b8f93f1822c68bdc5a74a28ca37e2191f42be70973b85a29fef14b29473d537a2ca0fd069018a6bd196db27509768feb71e7b58462ea241f0a WHIRLPOOL d22fa29b83d81e66200834697f0541f58e156c7e26963a165ec9a13348aefd574d1963cce8e80207e0dfbeb8ea937f82e473b0114040ca1f0ea6ee6e51ce067e
 AUX kodi-9999-no-arm-flags.patch 478 SHA256 5eb086595c1d645f1f10e6cb53179d7f9732b67d3cd58f2fc5558de50eee4d68 SHA512 672ad8512939d7362bbb0933998dfc0f316bce8407c305e36aad3509336bce3b28388799e83a9de9db446a1345000343e3d051099a60240e2f8c701c118f7eee WHIRLPOOL 8868b9e74175f539fe12260c987d2531c27c5d33d0532eab526ea7f9ebd797d953c1f75686a92f43ccf582323dab3c374cbe0aaee1fdb818251a116ee774af8b
-DIST kodi-15.1-generated-addons.tar.xz 73988 SHA256 97f0236542044a909d982cbf9a031f76395a59a1d4a79187c1102845579ed8f2 SHA512 559c188471c84503840b8b2010b73f15cf083367a1e1d0d5cfe7c144e36821a07c6fff1ff379ad8e8b254bc0cc2555c0a17ae998003adf86b051febde97bf2f1 WHIRLPOOL 01b76391d6aa7c624ad23329c962416cdf4662b96e99724bb566d7ed20b08b1525acd4f12671eef04ac10e5255d097f7c2452d2bfd87f7dfd3f4c1cd621fe2a6
-DIST kodi-15.1.tar.gz 61477835 SHA256 72b2610d8fbff807128d74429f25bf6716ba880c27c2c5d9fad012ec7fc70705 SHA512 b597253aa51d3d446ecb85ffe163362b5e55717d6fee16eab81725b9cdf0a5a9e4a2291aa526b9e63fbb34ef206100df30c9368684e2ddedc49e35f140d604f0 WHIRLPOOL 3596c00f9d25193e1e84cdfbf7fe5a6e6bdcce37caa710b8dd2b0b7aaa043164410459009dc793991373886abed8755298ee8803edf7b90227509d0c3578b8b9
-EBUILD kodi-15.1.ebuild 8498 SHA256 efae7b7da7bb23bacc35ba23c6bb7868e146a6c44dbdec75dc2cba6133df34d9 SHA512 fbf0a7d098875973ecad2dab27eea38296aa8aad050654290b34a2c3cdf03cd9d037bf11488d4ee65989f3eb6cf49232196c03f02551e5b741da14351622cec6 WHIRLPOOL a5b35b300202224090b37c0e90b1ba45b8c797261f562967450178a5d16695b8db7f59ddf1efabe41ee67168c8d87fd87bc943546a39fa93f2320c6fe24f65c1
-MISC ChangeLog 225 SHA256 509ef5a41fd2c0e5e6e2f117f6b715e93ef256897c8777de878d4d058be4d4b2 SHA512 50e1b99ad61a67a70c99a9ab208c76b82d7805b2bbebad2721b8d23d30b2d2691bd85adbd18f6f370cfc27dae5c4c178fe7da9914f091929bbfeccc7f05cf901 WHIRLPOOL 5c2c979b558949a0d5269073e873d248ada3da01166f72db24d1f54e03f3cfc6da4c6c7e432f2e5e83ea8ecf4a4285536f1b5835985b9ed4b5dbacf9b536c1f8
+DIST kodi-15.2-generated-addons.tar.xz 73912 SHA256 8c604be6188e03569209632dca96a9e333fa898e41651ac81f7fad2a45163610 SHA512 094ac1373a80d08371daad8fb1ee4422b8c16f77430fcd4a2b78ed0dc1883027086081e5788e07333c345121a20fda89b0bd5bcb2c8922b79573aca6e4726b9a WHIRLPOOL 560b8de1fa506ea1a73b5a0c539563649159dbb83b9996dc550e706037c5ff15dc657f382e55b2812797c1eee596b2b3b84a0061b6c74b2a5179a126a1841583
+DIST kodi-15.2.tar.gz 61484128 SHA256 dd8aeb942e6de5d1488e243e1346cff3f6597e21b5131a3ba72ff5cc82037110 SHA512 870f67b83aaa96b1a4111f34824eb47c24616d067adf930f4456ca8f1ac57052c41aa73915304ea85b1d10390865b88d88c85e6cd425b42ec5a504908adf4b67 WHIRLPOOL 5d484ff8eb8b48de643bf6dbff0ca824d528143d2f6f78f124bae19a0f67db72271c865786520672ef716cedba4ad4ad11c59fe857c8b34ec9331724f09046c2
+EBUILD kodi-15.2.ebuild 8500 SHA256 bae3a1f8be79dbef0b252750a2cd3ace8824421a8fa72667e79d22c79269434d SHA512 155ed71ce803ca99506e08f3305a32e61a4ba7a9a311e8b40dc147ad2ae45b124a7c9ac652da2766adae644a5d54e4eae0ebfdd05b869c5e2f06f13c2fbd4e4f WHIRLPOOL ad6c57d8daf322f9e9618bbea33f7c16593e9640dd5c902317dec38e699d5da43891046f26f9dce528338f51950188a11e748f4f52ea46522d0e5138073e1380
+MISC ChangeLog 362 SHA256 069106b7e3aa00cd47a7b045182da2e346f6420a1a95a53d11d7d9265d9d9767 SHA512 eec834c12d84cd6b2be6308e2a96a8e4f8e99fe6da06a77472e9b920ccf9eefd98263169af35b65f084f6bb0aa99935758fe07b1b30180036a73759c26f9b16e WHIRLPOOL f30d07f708e22f17e89429acaf7dda9cbdfde3dfd9e079919913a69ab4cba5a2be9939d627377e1c2f6c1a95bd8e9a46b9d2224c493ec08092a2f82c3c728a20
 MISC metadata.xml 1322 SHA256 fbdc9b5cf702d97dda0411171418906edd5f0bf819931bb07874c5b8f3ec0451 SHA512 0fbcc914f4242f4c4b3a16d05f2bca97c559fef8067f630b5a85344c9021e4efd56187b6af536df49206f2ca64057298f1d86c9f1b554db9ade5a6bb85891dea WHIRLPOOL 4052a7f4bc1a830a437108e21a8d89a7d9e58f2fe666a233e353bbbe052e3b160a5d27345fcffd27c637c6905f1de191cf8db7ad5b6e355337af4ce321d2beee
